Improved logging options

--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -688,11 +688,11 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     GROUPBOX        "Advanced Logging",IDC_STATIC,0,0,205,96
-    CONTROL         "Hopper Functions",IDC_LOG_BASIC_INFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,16,88,9
-    CONTROL         "Ini Functions",IDC_ENABLE_TRACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,32,139,8
-    CONTROL         "PrWin Functions",IDC_ENABLE_ERROR_LOGGiNG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,48,105,8
-    CONTROL         "ICM Functions",IDC_ENABLE_DLL_LOGGiNG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,64,105,8
-    CONTROL         "Delay Function", IDC_ENABLE_DELAY_LOGGiNG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 6, 80, 105, 8
+    CONTROL         "Hopper Functions",IDC_LOG_HOPPER_FUNCTIONS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,16,88,9
+    CONTROL         "Ini Functions",IDC_LOG_INI_FUNCTIONS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,32,139,8
+    CONTROL         "PrWin Functions",IDC_LOG_PRWIN_FUNCTIONS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,48,105,8
+    CONTROL         "ICM Functions",IDC_LOG_ICM_FUNCTIONS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,64,105,8
+    CONTROL         "Delay Function",IDC_LOG_DELAY_FUNCTION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 6, 80, 105, 8
     LTEXT           "Erase old logs larger than (MB)",IDC_STATIC,6,106,116,8
     EDITTEXT        IDC_MAXIMUM_LOGSIZE,163,104,31,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "",IDC_MAXIMUM_LOGSIZE_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,194,104,11,14
