--- a/OpenScrape/OpenScrape.rc
+++ b/OpenScrape/OpenScrape.rc
@@ -314,16 +314,18 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+    LTEXT           "Record name:", IDC_STATIC, 5, 5, 46, 8
     COMBOBOX        IDC_NAME,3,17,96,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,213,191,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,267,191,50,14
     LTEXT           "String:",IDC_STATIC,105,5,22,8
-    LTEXT           "Record name:",IDC_STATIC,5,5,46,8
-    LTEXT           "Titlebar text:",IDC_STATIC,4,40,43,8
-    EDITTEXT        IDC_TITLETEXT,50,37,266,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_PARSERESULTS,4,75,313,107,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
-    PUSHBUTTON      "Parse titlebar text with 'string'",IDC_PARSEBUTTON,5,58,114,14
-    COMBOBOX        IDC_VALUE,103,17,213,113,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_VALUE, 103, 17, 213, 113, CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Titlebar text:",IDC_STATIC,4,40,45,8
+    EDITTEXT        IDC_TITLETEXT,55,37,261,14,ES_AUTOHSCROLL
+    LTEXT           "Preprocessed:", IDC_STATIC, 4, 60, 45, 8
+    EDITTEXT        IDC_TITLETEXT_PREPROCESSED, 55, 57, 261, 14, ES_AUTOHSCROLL
+    EDITTEXT        IDC_PARSERESULTS,4,95,313,107,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
+    PUSHBUTTON      "Parse preprocessed titlebar text with 'string'",IDC_PARSEBUTTON,5,78,154,14
+    DEFPUSHBUTTON   "OK", IDOK, 213, 2111, 50, 14
+    PUSHBUTTON      "Cancel", IDCANCEL, 267, 211, 50, 14
 END
 
 IDD_EDIT_REGION DIALOGEX 0, 0, 130, 63
