--- a/OpenHoldem/OpenHoldem.vcxproj.filters
+++ b/OpenHoldem/OpenHoldem.vcxproj.filters
@@ -417,6 +417,9 @@
     <ClCompile Include="CSymbolengineDealerchair.cpp">
       <Filter>Source Files\Symbols\Symbol_Engines</Filter>
     </ClCompile>
+	<ClCompile Include="CSymbolengineDebug.cpp">
+      <Filter>Source Files\Symbols\Symbol_Engines</Filter>
+    </ClCompile>
     <ClCompile Include="CSymbolEngineEventLogging.cpp">
       <Filter>Source Files\Symbols\Symbol_Engines</Filter>
     </ClCompile>
@@ -729,7 +732,7 @@
     <ClCompile Include="CSymbolEngineCallers.cpp">
       <Filter>Source Files\Symbols\Symbol_Engines</Filter>
     </ClCompile>
-	<ClCompile Include="CSymbolEngineChecksBetsFolds.cpp">
+    <ClCompile Include="CSymbolEngineChecksBetsFolds.cpp">
       <Filter>Source Files\Symbols\Symbol_Engines</Filter>
     </ClCompile>
     <ClCompile Include="CSymbolEngineRaisers.cpp">
@@ -977,7 +980,10 @@
     <None Include="..\StringFunctionsDLL\string_functions.cpp">
       <Filter>Temp</Filter>
     </None>
-    <None Include="CSymbolEngineChecksBetsFolds.cpp">
+    <None Include="CSymbolengineDebug.h">
+      <Filter>Header Files\Symbols\Symbol_Engines</Filter>
+    </None>
+    <None Include="CSymbolengineDebug.cpp">
       <Filter>Source Files\Symbols\Symbol_Engines</Filter>
     </None>
   </ItemGroup>
@@ -1187,6 +1193,9 @@
       <Filter>Header Files\Symbols\Symbol_Engines</Filter>
     </ClInclude>
     <ClInclude Include="CSymbolEngineDealerchair.h">
+      <Filter>Header Files\Symbols\Symbol_Engines</Filter>
+    </ClInclude>
+	<ClInclude Include="CSymbolEngineDebug.h">
       <Filter>Header Files\Symbols\Symbol_Engines</Filter>
     </ClInclude>
     <ClInclude Include="CSymbolEngineEventLogging.h">
@@ -1600,7 +1609,7 @@
     <ClInclude Include="CSymbolEngineCallers.h">
       <Filter>Header Files\Symbols\Symbol_Engines</Filter>
     </ClInclude>
-	<ClInclude Include="CSymbolEngineChecksBetsFolds.h">
+    <ClInclude Include="CSymbolEngineChecksBetsFolds.h">
       <Filter>Header Files\Symbols\Symbol_Engines</Filter>
     </ClInclude>
     <ClInclude Include="CSymbolEngineRaisers.h">
