--- a/ManualMode/ManualMode.rc
+++ b/ManualMode/ManualMode.rc
@@ -106,7 +106,7 @@ BEGIN
     EDITTEXT        IDC_EDITENTRY,7,7,104,15,ES_AUTOHSCROLL
 END
 
-IDD_GAMEINFO DIALOGEX 0, 0, 152, 146
+IDD_GAMEINFO DIALOGEX 0, 0, 152, 163
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Game Info"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -124,8 +124,10 @@ BEGIN
     LTEXT           "Network",IDC_STATIC,6,93,28,8
     COMBOBOX        IDC_NETWORK,54,91,91,56,CBS_DROPDOWN | CBS_SORT | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Tournament",IDC_TOURNAMENT,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,6,108,55,10
-    DEFPUSHBUTTON   "OK",IDOK,23,125,50,14, WS_TABSTOP 
-    PUSHBUTTON      "Cancel",IDCANCEL,78,125,50,14, WS_TABSTOP
+    LTEXT           "Game Type", IDC_STATIC, 6, 125, 37, 8
+    COMBOBOX        IDC_HOLDEM_OMAHA, 54, 124, 91, 30, CBS_DROPDOWN | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,23,142,50,14, WS_TABSTOP 
+    PUSHBUTTON      "Cancel",IDCANCEL,78,142,50,14, WS_TABSTOP
 END
 
 
