--- a/ManualMode/ManualMode.rc
+++ b/ManualMode/ManualMode.rc
@@ -125,7 +125,7 @@ BEGIN
     COMBOBOX        IDC_NETWORK,54,91,91,56,CBS_DROPDOWN | CBS_SORT | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Tournament",IDC_TOURNAMENT,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,6,108,55,10
     LTEXT           "Game Type", IDC_STATIC, 6, 125, 37, 8
-    COMBOBOX        IDC_HOLDEM_OMAHA, 54, 124, 91, 30, CBS_DROPDOWN | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Omaha", IDC_HOLDEM_OMAHA, "Button", BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP, 6, 124, 55, 10
     DEFPUSHBUTTON   "OK",IDOK,23,142,50,14, WS_TABSTOP 
     PUSHBUTTON      "Cancel",IDCANCEL,78,142,50,14, WS_TABSTOP
 END
